fix dropdown arrow alignment

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,8 +1,3 @@
-.firework-hidden {
-  opacity: 0;
-  transition: all 1000 linear 3s; 
-}
-
 
 .main {
   display: flex;
